# vix

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.release  PULL_REQUEST_TEMPLATE.md  README-JP.md  README.ja.md  README.md  SECURITY.md  SECURITY_TESTS.md  minisign_ci.pub  package-lock.json  vcpkg.json  vixcpp.pub
examples/: 01_run_blocking.cpp  02_listen_background.cpp  03_listen_port_dynamic.cpp  CMakeLists.txt  EXAMPLES_README.md  README.md  batch_insert_tx.cpp  delete_example.cpp  delete_user.cpp  demo_with_orm.cpp  env_time_port.cpp  error_handling.cpp  full_crud_with_validation.cpp  get_example.cpp  hello_routes.cpp  json_builders_routes.cpp  json_builders_routes.hpp  logger_context_and_uuid.cpp  main.cpp  mega_middleware_routes.cpp  migrate_init.cpp  now_server.cpp  post_create_user.cpp  post_example.cpp  put_example.cpp  put_update_user.cpp  querybuilder_update.cpp  repository_crud_full.cpp  trace_route.cpp  tx_unit_of_work.cpp  user_crud_with_validation.cpp  users_crud.cpp  users_crud_internal.cpp  validation_user_create.cpp  vix_routes_showcase.cpp
examples/agent/: ai_analyze_project.cpp  ai_local_llama.cpp  ai_simple.cpp  ai_with_memory.cpp  ai_with_tools.cpp
examples/async/: 00_hello_task.cpp  01_signal_stop.cpp  01_timer.cpp  02_thread_pool.cpp  03_tcp_echo_server.cpp
examples/auth/: api_key_app_simple.cpp  session_cookies.cpp
examples/body_limit/: body_limit_app.cpp  body_limit_should_apply.cpp  index.html
examples/cache/: 01_memory_cache_basic.cpp  02_file_cache_persistence.cpp  03_lru_cache_eviction.cpp  04_offline_and_network_error.cpp  05_cache_key_and_headers.cpp  http_cache_app_custom_cache.cpp  http_cache_app_debug.cpp  http_cache_app_simple.cpp
examples/cache_http/: http_cache_app_custom_cache.cpp  http_cache_app_simple.cpp
examples/compression/: compression_app_simple.cpp
examples/config/: .env.example  01_server_port.cpp  02_database_config.cpp  03_logging_config.cpp  04_websocket_config.cpp  05_layered_env.cpp  06_database_from_env.cpp  README.md
examples/console.log/: basic.cpp  env.cpp  levels.cpp  multithread.cpp  rate_limit.cpp  types.cpp
examples/conversion/: conversion_cli_config.cpp  parse_bool.cpp  parse_enum.cpp  parse_float.cpp  parse_generic.cpp  parse_int.cpp  to_string.cpp  vix_conversion_showcase.cpp
examples/cookies/: cookie.cpp
examples/cors/: cors_app_basic.cpp  cors_app_strict.cpp
examples/csrf/: csrf_pipeline_demo.cpp  csrf_strict_server.cpp  index.html  security_cors_csrf_server.cpp
examples/db/: .env.example  CMakeLists.txt  basic_connect.cpp  http_db_env_showcase.cpp  migrations.cpp  mysql_basic.cpp  pool_usage.cpp  prepared_query.cpp  sqlite_basic.cpp  transaction.cpp
examples/env/: basic.cpp  get_bool.cpp  layered_env.cpp  load_env_file.cpp  load_layered_env.cpp  production_env.cpp
examples/error/: basic.cpp  chaining.cpp  exception.cpp  result.cpp
examples/etag/: etag_app_simple.cpp
examples/form/: form_app_simple.cpp  json_app_simple.cpp  json_app_strict.cpp  multipart_app_simple.cpp
examples/format/: 01_basic.cpp  02_multiple_args.cpp  03_indexing.cpp  04_escape.cpp  05_types.cpp  06_append.cpp  07_errors.cpp
examples/fs/: advanced.cpp  basic.cpp  copy_move.cpp  filesystem.cpp  list.cpp  read_write.cpp
examples/game/: asset_loading.cpp  async_asset_loading.cpp  basic_loop.cpp  export_project.cpp  hello_game.cpp  input_demo.cpp  jobs_demo.cpp  null_renderer.cpp  null_window.cpp  opengl_renderer_demo.cpp  render2d_demo.cpp  runtime_v3_demo.cpp  scene_demo.cpp  scene_serialization.cpp  sdl_renderer_demo.cpp  sdl_window_null_renderer_demo.cpp  sprite_demo.cpp  tiny_adventure.cpp  window_input_demo.cpp
examples/group_builder/: group_app_example.cpp  group_builder_example.cpp
examples/headers/: headers_pipeline_demo.cpp  index.html  security_cors_csrf_headers_server.cpp  security_headers_server.cpp
examples/http/: CMakeLists.txt  basic_get.cpp  json_api.cpp  json_builders_routes.cpp  now_server.cpp  router_params.cpp  trace_route.cpp
examples/http_crud/: CMakeLists.txt  batch_insert_tx.cpp  delete_user.cpp  error_handling.cpp  post_create_user.cpp  put_update_user.cpp  querybuilder_update.cpp  repository_crud_full.cpp  tx_unit_of_work.cpp  user_crud_with_validation.cpp  users_crud.cpp  users_crud_internal.cpp
examples/http_ws/: .env.example  CMakeLists.txt  HTTP_WS_EXAMPLE.md  http_ws_from_config.cpp  main_basic.cpp  main_chat.cpp  main_minimal.cpp  main_runtime.cpp
examples/input/: basic.cpp  multi_prompt.cpp  no_prompt.cpp
examples/inspect/: analytics.cpp  basic.cpp  containers.cpp  diagnostics.cpp  tree.cpp  user_types.cpp
examples/io/: advanced.cpp  basic.cpp  buffer.cpp  copy_stream.cpp  read_all.cpp  stdin.cpp  stdout.cpp
examples/ip_filter/: ip_filter_pipeline_demo.cpp  ip_filter_server.cpp
examples/json/: builders.cpp  io.cpp  jpath.cpp  quick_start.cpp
examples/kv/: basic.cpp  compact.cpp  delete.cpp  hello.cpp  list.cpp  memory.cpp  persistence_small.cpp  persistent.cpp  stats.cpp
examples/log/: basic.cpp  context.cpp  format.cpp
examples/middleware_http/: README.md  http_cache_example.cpp  mega_middleware_routes.cpp
examples/orm/: 01_basic_repository.cpp  02_repository_crud.cpp  03_find_all_and_count.cpp  04_exists_and_delete.cpp  05_unit_of_work.cpp  06_batch_insert_tx.cpp  07_query_builder_select.cpp  08_query_builder_update.cpp  09_error_handling.cpp  10_custom_repository.cpp  11_sqlite_repository.cpp  12_mysql_repository.cpp  13_migrations_code.cpp  14_migrations_files.cpp  15_entity_identity.cpp  16_manual_sql_with_orm.cpp  batch_insert_tx.cpp  demo_with_orm.cpp  error_handling.cpp  http_orm_env_showcase.cpp  migrate_init.cpp  querybuilder_update.cpp  tx_unit_of_work.cpp
examples/os/: basic.cpp  sleep.cpp  system_info.cpp  user_info.cpp
examples/p2p/: 01_envelope_and_framing_basic.cpp  02_hello_handshake_messages.cpp  03_discovery_announce_json.cpp  04_router_memory_basic.cpp  05_pack_secure_envelope.cpp  06_dispatch_decode_basic.cpp  07_wal_push_and_ack.cpp  (+4 more)
(+643 files in other folders)
